# quadSimGazebo

./: .gitignore  README.md
models/ground_plane/: model.config  model.sdf
models/sun/: model.config  model.sdf
models/x500/: model.sdf
models/x500_base/: model.sdf  removed
models/x500_depth/: model.sdf
sitl_firmware/: CMakeLists.txt  imu.cpp  imu.hh  main.cpp  motor_sender.cpp  motor_sender.hh  pid.cpp  pid.hh  rc.cpp  rc.hh
worlds/: empty copy.sdf  empty.sdf  fpv_forest.sdf
